@@ -72,6 +72,21 @@ Ti68kBreakpoints	bkpts = { 0 };
   - reset the lib
 */
 
+static int is_win_9x(void)
+{
+#ifdef __WIN32__
+	OSVERSIONINFO os;
+
+	memset(&os, 0, sizeof(OSVERSIONINFO));
+	os.dwOSVersionInfoSize = sizeof(OSVERSIONINFO);
+  	GetVersionEx(&os);
+
+	return (os.dwPlatformId == VER_PLATFORM_WIN32_WINDOWS);
+#else
+	return 0;
+#endif;
+}
+
 /*
   This should be the FIRST function to call (unless the 'params' 
   structure has been properly initialized.
@@ -84,7 +99,8 @@ int ti68k_config_load_default(void)
     params.lcd_rate = -1;
 	params.hw_protect = !0;
 	params.recv_file = 1;
-	params.timeout = 600;	// 60s
+
+	params.timeout = is_win_9x() ? 600 : 15;	// 1.5 or 60s
 
     ticable_get_default_param(&link_cable);
     link_cable.link_type = LINK_NUL;
